[package]
name = "ai"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
llm-chain = "0.8.2"
llm-chain-openai = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
markdown = { version = "1.0.0-alpha.8" }
redis = { version = "0.23.0", features = ["json"] }
serde_json = "1.0.96"
http = "0.2.9"
jwt-authorizer = "0.9.0"
